# Bakery

./: .gitignore  Bakery  Makefile  PKGBUILD  README.md  bakery-cli.py  bakery-gui.py  bakery-tui.py  bakery.py  config.py  config.toml  crowdin.yml  example.toml  gui.py  meson.build  pyproject.toml  testsd.cmb  translations.sh
af/: po
ar/: po
assets/: extra.css
bakery/: __init__.py  appstream.py  config.py  install.py  iso.py  keyboard.py  locale.py  misc.py  network.py  packages.py  partitioning.py  timezone.py  tweaks.py  validate.py
bakery/gui/: __init__.py  desktops.py  finish.py  helper.py  install.py  keyboard.py  locale.py  main.py  packages.py  partitioning.py  summary.py  timezone.py  user.py
bakery/tui/: main.py
bg/: po
ca/: po
cs/: po
da/: po
data/: bakery.cmb  de_screen.ui  desktops.yaml  finish_screen.ui  install_screen.ui  kb_dialog.ui  kb_screen.ui  locale_screen.ui  main.css  meson.build  org.bredos.bakery.appdata.xml.in  org.bredos.bakery.desktop.in  org.bredos.bakery.gresource.xml  org.bredos.bakery.gschema.xml  packages.yaml  packages_screen.ui  partitioning_screen.ui  summary_screen.ui  timezone_screen.ui  user_screen.ui  window.ui
data/icons/: meson.build
data/ui/: bakery.cmb  de_screen.ui  finish_screen.ui  kb_screen.ui  locale_screen.ui  packages_screen.ui  partitioning_screen.ui  user_screen.ui  window.ui
de/: po
el/: po
en/: po
es-ES/: po
fi/: po
fr/: po
he/: po
hu/: po
it/: po
ja/: po
ko/: po
locale/: bakery.pot
locale/bg/LC_MESSAGES/: bakery.mo  bakery.po
locale/da/LC_MESSAGES/: bakery.mo  bakery.po
locale/el/LC_MESSAGES/: bakery.po
locale/fr/LC_MESSAGES/: bakery.mo  bakery.po
locale/hu/LC_MESSAGES/: bakery.mo  bakery.po
locale/nl/LC_MESSAGES/: bakery.po
nl/: po
no/: po
pl/: po
po/: LINGUAS  POTFILES  af.po  ar.po  bakery.pot  bg.po  ca.po  cs.po  da.po  de.po  el.po  en.po  es.po  fi.po  fr.po  he.po  hr.po  hu.po  it.po  ja.po  ko.po  meson.build  nl.po  no.po  pl.po  pt.po  ro.po  ru.po  sr.po  sv.po  tr.po  uk.po  vi.po
pt-BR/: po
pt-PT/: po
ro/: po
ru/: po
sr/: po
sv-SE/: po
tr/: po
ui/: bakery.cmb  bakery.ui
uk/: po
vi/: po
